# sw6106mon

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.cpp  config.h  i2c.cpp  i2c.h  main.cpp  sw6106.cpp  sw6106.h
cmake/: package.cmake
extra/: S46sw6106mon  sw6106mon-initd  sw6106mon.conf  sw6106mon.service
